--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -162,3 +162,14 @@ td {
 	text-align:center;
 	margin-top:100px;
 }
+
+body.splash {
+	background-color:#000000;
+	margin:0;
+}
+
+body.splash div.splash-container {
+	width:100%;
+	height:688px;
+	background:url('../img/Splash.jpg') top center no-repeat #000000;
+}
