--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -4,7 +4,7 @@ body {
 	font-size: 12px; 
 	color:#443E47;
 	line-height: 20px; 
-	margin: 40px; 
+	margin: 20px 40px; 
 }
 
 #wrapper { 
@@ -21,8 +21,9 @@ a {
 
 h1 { 
 	color: #000; 
-	font-size: 55px; 
-	padding: 0 0 25px; 
+	font-size: 30px; 
+	padding: 0 0 20px;
+	margin:0; 
 	line-height: 1em; 
 }
 
@@ -90,7 +91,7 @@ li {
 #info-container {
 	float:left;
 	width:500px;
-	margin-left:50px;
+	margin-left:30px;
 }
 
 .blog-date {
@@ -125,8 +126,17 @@ table {
 th {
 	background-color:gray;
 }
+
 td {
 	border:1px solid black;
+}
+
+table#mosaic {
+	border:none;
+}
+
+table#mosaic td {
+	border:none;
 }
 
 #artists-container {
@@ -172,4 +182,10 @@ body.splash div.splash-container {
 	width:100%;
 	height:688px;
 	background:url('../img/Splash.jpg') top center no-repeat #000000;
+}
+
+div#home-container,
+div#info-container/*,
+div#artists-container*/ {
+	margin-bottom:100px;
 }
