--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -4,7 +4,7 @@ body {
 	font-size: 12px; 
 	color:#443E47;
 	line-height: 20px; 
-	margin: 20px 10px; 
+	margin: 0px 10px 20px 10px; 
 }
 
 #wrapper { 
@@ -90,7 +90,7 @@ li {
 
 #info-container {
 	float:left;
-	width:500px;
+	min-width:560px;
 	margin-left:30px;
 }
 
@@ -187,10 +187,12 @@ div#home-container,
 div#info-container/*,
 div#artists-container*/ {
 	margin-bottom:100px;
+	position:relative;
 }
 
 div.release-content img.release-img {
-	margin-bottom:15px;
+	margin-right:20px;
+	float:left;
 }
 
 #artists-container .sub_link_container {
@@ -201,7 +203,7 @@ div.release-content img.release-img {
 }
 
 div#home-container h1.home-title {
-	margin:0 0 0 30px;
+	margin:0 0 20px 0;
 }
 
 div.tumblr-entry div.tumblr-link {
@@ -211,4 +213,8 @@ div.tumblr-entry div.tumblr-link {
 
 div.tumblr-entry {
 	padding:0 0 0 15px;
+}
+
+.catalogue_id {
+	font-size:15px;
 }
